# ChangeLog for dev-python/protobuf-socketrpc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*protobuf-socketrpc-1.3.2 (08 Dec 2014)

  08 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  +protobuf-socketrpc-1.3.2.ebuild, +metadata.xml:
  Add protobuf-socketrpc-1.3.2.ebuild
